lines; description box fix overlap; custom size for select; limit rows

--- a/src/app/edit-task/edit-task.component.scss
+++ b/src/app/edit-task/edit-task.component.scss
@@ -6,8 +6,8 @@ h1, h2, h3, h4, h5, h6, text, p, button, input, .input-title {
 
 .btn {
   size: 300px;
-  margin: 0.5rem;
-  padding: 15px;
+  margin: 1rem;
+  padding: 1rem;
   alignment: right;
   border: 2px solid $green;
 }
@@ -39,20 +39,32 @@ h1, h2, h3, h4, h5, h6, text, p, button, input, .input-title {
 }
 
 .input-field {
-  /*padding: 12px 20px;*/
-  padding: 0.6rem 1rem;
+  padding: 0.6rem 0.5rem 0.5rem 0.6rem;
+  //margin: 0.6rem;
   border: 1px solid $grey;
   border-bottom: 2px solid $green;
   width: 8rem;
+  height: 1rem;
 }
+
 
 .input-field--wide {
   width: 16rem;
-  column-span: 4;
 }
 
-.input-block--high {
-  row-span: 5;
+.description-field {
+  height: 5rem;
+  resize: none;
+}
+
+.description {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 2;
+}
+
+.select {
+  height: 2.5rem;
+  width: 9.1rem;
 }
 
 .flex-container {
@@ -64,9 +76,20 @@ h1, h2, h3, h4, h5, h6, text, p, button, input, .input-title {
   grid-auto-flow: dense;
   grid-template-columns: repeat(auto-fit, 20rem);
   grid-auto-rows: 5rem;
+  justify-items: start;
+  max-width: 60rem;
 
 }
 
 .students {
   color: orange;
+}
+
+hr {
+  width: 95%;
+  height: 1px;
+  margin: 0;
+  color: $grey;
+  border-width:0;
+  background-color: $grey;
 }
